fixed the profile underline when hover so it won't jump

--- a/css/main.css
+++ b/css/main.css
@@ -197,23 +197,16 @@ section p {
 
 /* boxed section for profile */
 .section-box {
-	position: relative;
+	width: 100%;
+	height: auto;
 	background-color: #fff;
-	height: 130px;
+	padding: 2rem 0;
 }
 
 /* when profile boxes are hovered, show a border at the bottom */
 a .section-box:hover,a .section-box:focus {
 	border-bottom: 3px solid #efb99f;
 	margin-bottom: -3px;
-}
-
-/* content found inside boxed section */
-.box-content { /*centering content within box taken from: http://stackoverflow.com/questions/6490252/vertically-centering-a-div-inside-another-div*/
- 	position: absolute;
- 	width: 100%;
-	top: 50%; left: 50%;
-	transform: translate(-50%,-50%);
 }
 
 /* Page Footer Style code (for when content is short from https://css-tricks.com/couple-takes-sticky-footer) */
@@ -465,18 +458,7 @@ a .section-box:hover,a .section-box:focus {
 	display: none;
 }
 
-/* BUBBLETEA IMAGE SIZING */
-.bubbletea {
-	width: 100%;
-	height: auto;
-	padding: 0;
-}
 
-/* when bubbletea images are hovered, show a line at the bottom */
-a .bubbletea:hover,a .bubbletea:focus {
-	border-bottom: 3px solid #efb99f;
-	margin-bottom: -3px;
-}
 
 /* REWARD IMAGE SIZING */
 .reward {
